# Trucking

./: .gitignore  .replit  dump.rdb  pnpm-lock.yaml  pyproject.toml
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  api-server-proxy-body-hang.md  autonomatex-api-quirks.md  dispatch-site.md  vite-scaffold-env.md
artifacts/autonomatex/: index.html  netlify.toml  package.json
artifacts/dispatch/: index.html  netlify.toml  package.json
artifacts/drive/: index.html  package.json  vite.config.ts
artifacts/enterprise/: index.html  package.json
attached_assets/: Pasted-ADDITIONAL-ENTERPRISE-REFINEMENT-Do-not-redesign-the-we_1783706498792.txt  Pasted-Excellent-work-Do-NOT-redesign-the-website-Do-NOT-chang_1783590682096.txt  Pasted-FINAL-ENTERPRISE-REFINEMENT-DO-NOT-REDESIGN-THE-WEBSITE_1783707405003.txt  Pasted-FINAL-ENTERPRISE-REFINEMENT-DO-NOT-REDESIGN-THE-WEBSITE_1783713876486.txt  Pasted-FINAL-REFINEMENT-DO-NOT-REDESIGN-THE-WEBSITE-The-design_1783622900489.txt  Pasted-IMPORTANT-Before-making-any-changes-analyze-the-entire-_1783600186109.txt  Pasted-IMPORTANT-PRODUCT-STRATEGY-UPDATE-Before-implementing-t_1783598651168.txt  Pasted-IMPORTANT-The-current-website-direction-has-already-bee_1783619655215.txt  Pasted-You-are-not-a-website-generator-You-are-the-Founding-De_1783589192272.txt  Pasted-You-are-now-the-Founding-Product-Team-for-Autonomatex-D_1783595554165.txt  Pasted-You-are-now-the-Founding-Product-Team-for-Autonomatex-D_1783610442705.txt  Pasted-You-are-the-Lead-Staff-Software-Engineer-Creative-Direc_1783583076757.txt
(+130 files in other folders)
